navbar and sections setup complete - still a bug with linking within the page: navbar covers the section name

--- a/css/custom.css
+++ b/css/custom.css
@@ -22,8 +22,12 @@
 }
 
 .spaced {
-  margin-top: 9rem;
-  margin-bottom: 7rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.spaced.nav_extra {
+  padding-top: 12rem;
 }
 
 .material-icons.logo {
@@ -31,14 +35,44 @@
   text-align: center;
 }
 
+.navbar-list {
+  list-style: none;
+}
+
+.navbar-item {
+    position: relative;
+    float: left;
+    margin-bottom: 0;
+}
+
+.navbar-link {
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 600;
+    letter-spacing: .2rem;
+    margin-right: 35px;
+    text-decoration: none;
+    line-height: 6.5rem;
+    color:  #222;
+}
+
 #stickyNav {
-  background: white;
-  height: 60px;
+  /* background: white; */
+  /* height: 60px; */
   /* width: 300px; */
   position: absolute;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   /* top: 300px; */
 }
 #stickyNav ul {
   float: left;
+}
+
+@media (max-width: 800px) {
+  .navbar {
+    height: 13rem;
+  }
+  .spaced.nav_extra {
+    padding-top: 18rem;
+  }
 }
